# duckdb

./: CMakeLists.txt
.github/workflows/: LinuxRelease.yml  OSX.yml  Windows.yml
tools/jdbc/: CMakeLists.txt
tools/jdbc/src/jni/: duckdb_java.cpp
tools/jdbc/src/main/java/org/duckdb/: DuckDBArrayStreamImporter.java  DuckDBColumnType.java  DuckDBNative.java  DuckDBResultSet.java  DuckDBTimestamp.java
tools/jdbc/src/test/java/org/duckdb/test/: TestDuckDBJDBC.java
